<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gymlustBackground"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textSize="24sp" />

    <include
        android:id="@+id/edit_d_score"
        layout="@layout/edit_score_layout" />

    <include
        android:id="@+id/edit_e_score"
        layout="@layout/edit_score_layout" />

    <include
        android:id="@+id/edit_n_score"
        layout="@layout/edit_score_layout" />

    <LinearLayout
        android:id="@+id/vault_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vault_1_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/vault_1_label"
            android:textAlignment="textEnd"
            android:textColor="@color/gymlustBackground"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/vault_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1.3"
            android:checked="false"
            android:onClick="vaultSwitchedChanged" />

        <TextView
            android:id="@+id/vault_2_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/vault_2_label"
            android:textColor="@color/disabledColor"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/ok" />

        <Button
            android:id="@+id/edit_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
